antlr/grammar/tmp/cruleParser.java
// Generated from crule.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class cruleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, PLUS=2, MINUS=3, DIV=4, MUL=5, MOD=6, DOT=7, SEMICOLON=8, LR_BRACE=9, 
		RR_BRACE=10, LR_BRACKET=11, RR_BRACKET=12, LS_BRACKET=13, RS_BRACKET=14, 
		RULE=15, IF=16, IN=17, THEN=18, AND=19, OR=20, TRUE=21, FALSE=22, NIL_LITERAL=23, 
		NEGATION=24, SALIENCE=25, EQUALS=26, ASSIGN=27, PLUS_ASIGN=28, MINUS_ASIGN=29, 
		DIV_ASIGN=30, MUL_ASIGN=31, GT=32, LT=33, GTE=34, LTE=35, NOTEQUALS=36, 
		BITAND=37, BITOR=38, SIMPLENAME=39, DQUOTA_STRING=40, SQUOTA_STRING=41, 
		DECIMAL_FLOAT_LIT=42, DECIMAL_EXPONENT=43, HEX_FLOAT_LIT=44, HEX_EXPONENT=45, 
		DEC_LIT=46, HEX_LIT=47, OCT_LIT=48, SPACE=49, COMMENT=50, LINE_COMMENT=51;
	public static final int
		RULE_crl = 0, RULE_ruleEntry = 1, RULE_salience = 2, RULE_ruleName = 3, 
		RULE_ruleDescription = 4, RULE_ifScope = 5, RULE_thenScope = 6, RULE_thenExpressionList = 7, 
		RULE_thenExpression = 8, RULE_assignment = 9, RULE_expression = 10, RULE_mulDivOperators = 11, 
		RULE_addMinusOperators = 12, RULE_comparisonOperator = 13, RULE_andLogicOperator = 14, 
		RULE_orLogicOperator = 15, RULE_expressionAtom = 16, RULE_constant = 17, 
		RULE_variable = 18, RULE_arrayMapSelector = 19, RULE_memberVariable = 20, 
		RULE_functionCall = 21, RULE_methodCall = 22, RULE_argumentList = 23, 
		RULE_floatLiteral = 24, RULE_decimalFloatLiteral = 25, RULE_hexadecimalFloatLiteral = 26, 
		RULE_integerLiteral = 27, RULE_decimalLiteral = 28, RULE_hexadecimalLiteral = 29, 
		RULE_octalLiteral = 30, RULE_stringLiteral = 31, RULE_booleanLiteral = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"crl", "ruleEntry", "salience", "ruleName", "ruleDescription", "ifScope", 
			"thenScope", "thenExpressionList", "thenExpression", "assignment", "expression", 
			"mulDivOperators", "addMinusOperators", "comparisonOperator", "andLogicOperator", 
			"orLogicOperator", "expressionAtom", "constant", "variable", "arrayMapSelector", 
			"memberVariable", "functionCall", "methodCall", "argumentList", "floatLiteral", 
			"decimalFloatLiteral", "hexadecimalFloatLiteral", "integerLiteral", "decimalLiteral", 
			"hexadecimalLiteral", "octalLiteral", "stringLiteral", "booleanLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'+'", "'-'", "'/'", "'*'", "'%'", "'.'", "';'", "'{'", 
			"'}'", "'('", "')'", "'['", "']'", null, null, null, null, "'&&'", "'||'", 
			null, null, null, "'!'", null, "'=='", "'='", "'+='", "'-='", "'/='", 
			"'*='", "'>'", "'<'", "'>='", "'<='", "'!='", "'&'", "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "PLUS", "MINUS", "DIV", "MUL", "MOD", "DOT", "SEMICOLON", 
			"LR_BRACE", "RR_BRACE", "LR_BRACKET", "RR_BRACKET", "LS_BRACKET", "RS_BRACKET", 
			"RULE", "IF", "IN", "THEN", "AND", "OR", "TRUE", "FALSE", "NIL_LITERAL", 
			"NEGATION", "SALIENCE", "EQUALS", "ASSIGN", "PLUS_ASIGN", "MINUS_ASIGN", 
			"DIV_ASIGN", "MUL_ASIGN", "GT", "LT", "GTE", "LTE", "NOTEQUALS", "BITAND", 
			"BITOR", "SIMPLENAME", "DQUOTA_STRING", "SQUOTA_STRING", "DECIMAL_FLOAT_LIT", 
			"DECIMAL_EXPONENT", "HEX_FLOAT_LIT", "HEX_EXPONENT", "DEC_LIT", "HEX_LIT", 
			"OCT_LIT", "SPACE", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "crule.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public cruleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CrlContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(cruleParser.EOF, 0); }
		public List<RuleEntryContext> ruleEntry() {
			return getRuleContexts(RuleEntryContext.class);
		}
		public RuleEntryContext ruleEntry(int i) {
			return getRuleContext(RuleEntryContext.class,i);
		}
		public CrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_crl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).enterCrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).exitCrl(this);
		}
	}

	public final CrlContext crl() throws RecognitionException {
		CrlContext _localctx = new CrlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_crl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RULE) {
				{
				{
				setState(66);
				ruleEntry();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleEntryContext extends ParserRuleContext {
		public TerminalNode RULE() { return getToken(cruleParser.RULE, 0); }
		public RuleNameContext ruleName() {
			return getRuleContext(RuleNameContext.class,0);
		}
		public TerminalNode LR_BRACE() { return getToken(cruleParser.LR_BRACE, 0); }
		public IfScopeContext ifScope() {
			return getRuleContext(IfScopeContext.class,0);
		}
		public ThenScopeContext thenScope() {
			return getRuleContext(ThenScopeContext.class,0);
		}
		public TerminalNode RR_BRACE() { return getToken(cruleParser.RR_BRACE, 0); }
		public RuleDescriptionContext ruleDescription() {
			return getRuleContext(RuleDescriptionContext.class,0);
		}
		public SalienceContext salience() {
			return getRuleContext(SalienceContext.class,0);
		}
		public RuleEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleEntry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).enterRuleEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).exitRuleEntry(this);
		}
	}

	public final RuleEntryContext ruleEntry() throws RecognitionException {
		RuleEntryContext _localctx = new RuleEntryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ruleEntry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(RULE);
			setState(75);
			ruleName();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DQUOTA_STRING || _la==SQUOTA_STRING) {
				{
				setState(76);
				ruleDescription();
				}
			}

			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SALIENCE) {
				{
				setState(79);
				salience();
				}
			}

			setState(82);
			match(LR_BRACE);
			setState(83);
			ifScope();
			setState(84);
			thenScope();
			setState(85);
			match(RR_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SalienceContext extends ParserRuleContext {
		public TerminalNode SALIENCE() { return getToken(cruleParser.SALIENCE, 0); }
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public SalienceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_salience; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).enterSalience(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).exitSalience(this);
		}
	}

	public final SalienceContext salience() throws RecognitionException {
		SalienceContext _localctx = new SalienceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_salience);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(SALIENCE);
			setState(88);
			integerLiteral();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleNameContext extends ParserRuleContext {
		public TerminalNode SIMPLENAME() { return getToken(cruleParser.SIMPLENAME, 0); }
		public RuleNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).enterRuleName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).exitRuleName(this);
		}
	}

	public final RuleNameContext ruleName() throws RecognitionException {
		RuleNameContext _localctx = new RuleNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ruleName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(SIMPLENAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleDescriptionContext extends ParserRuleContext {
		public TerminalNode DQUOTA_STRING() { return getToken(cruleParser.DQUOTA_STRING, 0); }
		public TerminalNode SQUOTA_STRING() { return getToken(cruleParser.SQUOTA_STRING, 0); }
		public RuleDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleDescription; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).enterRuleDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).exitRuleDescription(this);
		}
	}

	public final RuleDescriptionContext ruleDescription() throws RecognitionException {
		RuleDescriptionContext _localctx = new RuleDescriptionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ruleDescription);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !(_la==DQUOTA_STRING || _la==SQUOTA_STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfScopeContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(cruleParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public IfScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).enterIfScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).exitIfScope(this);
		}
	}

	public final IfScopeContext ifScope() throws RecognitionException {
		IfScopeContext _localctx = new IfScopeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifScope);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(IF);
			setState(95);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThenScopeContext extends ParserRuleContext {
		public TerminalNode THEN() { return getToken(cruleParser.THEN, 0); }
		public ThenExpressionListContext thenExpressionList() {
			return getRuleContext(ThenExpressionListContext.class,0);
		}
		public ThenScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thenScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).enterThenScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).exitThenScope(this);
		}
	}

	public final ThenScopeContext thenScope() throws RecognitionException {
		ThenScopeContext _localctx = new ThenScopeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_thenScope);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(THEN);
			setState(98);
			thenExpressionList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThenExpressionListContext extends ParserRuleContext {
		public List<ThenExpressionContext> thenExpression() {
			return getRuleContexts(ThenExpressionContext.class);
		}
		public ThenExpressionContext thenExpression(int i) {
			return getRuleContext(ThenExpressionContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(cruleParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(cruleParser.SEMICOLON, i);
		}
		public ThenExpressionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thenExpressionList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).enterThenExpressionList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).exitThenExpressionList(this);
		}
	}

	public final ThenExpressionListContext thenExpressionList() throws RecognitionException {
		ThenExpressionListContext _localctx = new ThenExpressionListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_thenExpressionList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				thenExpression();
				setState(101);
				match(SEMICOLON);
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << TRUE) | (1L << FALSE) | (1L << NIL_LITERAL) | (1L << NEGATION) | (1L << SIMPLENAME) | (1L << DQUOTA_STRING) | (1L << SQUOTA_STRING) | (1L << DECIMAL_FLOAT_LIT) | (1L << HEX_FLOAT_LIT) | (1L << DEC_LIT) | (1L << HEX_LIT) | (1L << OCT_LIT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThenExpressionContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ExpressionAtomContext expressionAtom() {
			return getRuleContext(ExpressionAtomContext.class,0);
		}
		public ThenExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thenExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).enterThenExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).exitThenExpression(this);
		}
	}

	public final ThenExpressionContext thenExpression() throws RecognitionException {
		ThenExpressionContext _localctx = new ThenExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_thenExpression);
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				expressionAtom(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(cruleParser.ASSIGN, 0); }
		public TerminalNode PLUS_ASIGN() { return getToken(cruleParser.PLUS_ASIGN, 0); }
		public TerminalNode MINUS_ASIGN() { return getToken(cruleParser.MINUS_ASIGN, 0); }
		public TerminalNode DIV_ASIGN() { return getToken(cruleParser.DIV_ASIGN, 0); }
		public TerminalNode MUL_ASIGN() { return getToken(cruleParser.MUL_ASIGN, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			variable(0);
			setState(112);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASSIGN) | (1L << PLUS_ASIGN) | (1L << MINUS_ASIGN) | (1L << DIV_ASIGN) | (1L << MUL_ASIGN))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(113);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode LR_BRACKET() { return getToken(cruleParser.LR_BRACKET, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode RR_BRACKET() { return getToken(cruleParser.RR_BRACKET, 0); }
		public TerminalNode NEGATION() { return getToken(cruleParser.NEGATION, 0); }
		public ExpressionAtomContext expressionAtom() {
			return getRuleContext(ExpressionAtomContext.class,0);
		}
		public MulDivOperatorsContext mulDivOperators() {
			return getRuleContext(MulDivOperatorsContext.class,0);
		}
		public AddMinusOperatorsContext addMinusOperators() {
			return getRuleContext(AddMinusOperatorsContext.class,0);
		}
		public ComparisonOperatorContext comparisonOperator() {
			return getRuleContext(ComparisonOperatorContext.class,0);
		}
		public AndLogicOperatorContext andLogicOperator() {
			return getRuleContext(AndLogicOperatorContext.class,0);
		}
		public OrLogicOperatorContext orLogicOperator() {
			return getRuleContext(OrLogicOperatorContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cruleListener ) ((cruleListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NEGATION) {
					{
					setState(116);
					match(NEGATION);
					}
				}
